feat: add shortcut for changing language

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body{
-  background-image: url(./288179992029211.png);
+  background-image: url(./images/288179992029211.png);
   background-size: 500px;
 }
 div {
   font-family: "Open Sans";
   width: 920px;
-  height: 350px;
+  height: 280px;
   margin-left: 20%;
   margin-top: 20px;
 }
@@ -62,6 +62,16 @@ input[value='Ctrl'] {
 input:hover{
   background-color: #ffd3ce;
 }
-/* .active{
-  border: 2px solid gold black black gold;
-} */
+.short_cut {
+  height: 100px;
+  width: 940px;
+  background-color: rgba(255, 253, 253, 0.8);
+}
+.short_cut > p{
+  padding: auto;
+  font-weight: 700;
+  text-align: center;
+  color:#fdb6ae;
+  opacity: 0.5;
+  font-size: 30px;
+}
